  - bradfitz: optional smart mp3 chunking. (start of file-aware chunking
    strategies)  with smart mp3 chunking, the ID3 tags are kept in separate
    chunks, so future re-tagging of your music won't force iterative backups
    to re-upload all the music bytes again... just the updated
    metadata (tiny)

  - Add a new option to the Amazon S3 target to force a prefix to be 
    added to the names of any saved backups.
    It might be worth moving this up into Brackup itself at some point,
    since it's probably useful for other network-based targets.

  - Fix Restore.pm to use binmode for operating systems that care about
    such things.

  - Added a first whack at a FUSE filesystem for mounting a backup
    as a real filesystem.

  - Added FTP target.

  - added the aws_location option to set the datacenter location for
    S3 targets. from Alessandro Ranellucci <aar@cpan.org>.
    The Amazon S3 target now depends on version 0.41 of Net::Amazon::S3.

  - fixed tempfile creation in gc (orphaned files were left in the
    working directory). from Alessandro Ranellucci <aar@cpan.org>.

  - added the aws_prefix option to configure multiple backup targets
    on a single Amazon account. from Alessandro Ranellucci <aar@cpan.org>.

1.06 (october 20, 2007)

  - new on-disk layout for the Filesystem target.  fully backwards
    compatible with the old layout.  also, if max-link count (max
    files in a directory) is hit, this new version will carefully
    rearrange the minimum files necessary to the new layout to
    make room, all automatically.  the new format is xx/xx/*,
    rather than xxxx/xxxx/xxxx/xxxx/* which was stupid and overkill.
    stupid because that's 65k of files in the root, twice ext3's
    limit, and overkill because leaves were always just 1 file.
    thanks to Max Kanat-Alexander for pointing this out, and
    part of the patch to use new layout pattern.

  - quieter (no) error messages on death/control-C from gpg child