@@ -36,6 +36,7 @@ lib/Brackup/Target/Filesystem.pm
 lib/Brackup/TargetBackupStatInfo.pm
 lib/Brackup/Test.pm
 lib/Brackup/Util.pm
+HACKING
 Makefile.PL
 MANIFEST			This list of files
 MANIFEST.SKIP
