@@ -1,3 +1,7 @@
+  - smarts to filesystem target, noticed when using sshfs (slow filesystem).
+    does .partial files now, is smart about not overwriting existing chunk
+    that's there, etc.
+
   - bradfitz: optional smart mp3 chunking. (start of file-aware chunking
     strategies)  with smart mp3 chunking, the ID3 tags are kept in separate
     chunks, so future re-tagging of your music won't force iterative backups
